--- a/style.css
+++ b/style.css
@@ -4,18 +4,52 @@ body {
     background: #777;
     width: 960px;
     font-size: 18px;
+    margin-left: 200px;
+}
+nav {margin-top: 8px;
+    margin-bottom: 18px;
 }
 .deco {
     background: #ebebeb;
+    text-align: center;
+    padding: 8px;
 }
 article {
 color: #ebebeb;
 background: #777;
+margin: 10px;
+padding: 15px;
+}
+#head {
+color: #777;
+background: #ebebeb;
+margin:10px;
+padding: 20px;
+text-align: center;
+}
+#head-1 {
+    float: left;
+}
+#head-2 {
+    float: left;
+}
+#head-3 {
+    float: right;
 }
 h1 p {
     color: #777;
     background: #ebebeb;
 }
 section {
+    color: #777;
+    background: #ebebeb;
+    float: left;
     width: 495px;
+}
+aside {
+    float: right;
+}
+footer {
+    text-align: center;
+    background: #ebebeb;
 }
